tests/src/frontend/typechecking/invalid/tunder_2.sk
fun foo(): _ {
  foo()
}

fun bar(x: _): _ {
  x
}

fun baz(): _ {
  bar(foo())
}
